apm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-server-ingress
  namespace: elastic
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - {FQDN}
      secretName: letsencrypt-apm-server
  rules:
  - host: "{FQDN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apm-server-apm-http
            port:
              number: 8200
